[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/character/Idle (7).png" type="Texture" id=1]
[ext_resource path="res://assets/character/Idle (9).png" type="Texture" id=2]
[ext_resource path="res://assets/character/Idle (10).png" type="Texture" id=3]
[ext_resource path="res://assets/character/Idle (8).png" type="Texture" id=4]
[ext_resource path="res://assets/character/Idle (2).png" type="Texture" id=5]
[ext_resource path="res://assets/character/Idle (4).png" type="Texture" id=6]
[ext_resource path="res://assets/character/Idle (3).png" type="Texture" id=7]
[ext_resource path="res://assets/character/Idle (5).png" type="Texture" id=8]
[ext_resource path="res://assets/character/Idle (6).png" type="Texture" id=9]
[ext_resource path="res://assets/character/Idle (1).png" type="Texture" id=10]
[ext_resource path="res://assets/character/Run (2).png" type="Texture" id=11]
[ext_resource path="res://assets/character/Run (4).png" type="Texture" id=12]
[ext_resource path="res://assets/character/Run (5).png" type="Texture" id=13]
[ext_resource path="res://assets/character/Run (6).png" type="Texture" id=14]
[ext_resource path="res://assets/character/Run (3).png" type="Texture" id=15]
[ext_resource path="res://assets/character/Run (1).png" type="Texture" id=16]
[ext_resource path="res://assets/character/Run (7).png" type="Texture" id=17]
[ext_resource path="res://assets/character/Run (8).png" type="Texture" id=18]
[ext_resource path="res://src/Player.gd" type="Script" id=19]
[ext_resource path="res://assets/character/Jump (8).png" type="Texture" id=20]
[ext_resource path="res://assets/character/Jump (4).png" type="Texture" id=21]
[ext_resource path="res://assets/character/Jump (7).png" type="Texture" id=22]
[ext_resource path="res://assets/character/Jump (6).png" type="Texture" id=23]
[ext_resource path="res://assets/character/Jump (9).png" type="Texture" id=24]
[ext_resource path="res://assets/sounds/8bitJump.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/character/Jump (5).png" type="Texture" id=26]
[ext_resource path="res://assets/character/Jump (10).png" type="Texture" id=27]
[ext_resource path="res://assets/character/Jump (3).png" type="Texture" id=28]
[ext_resource path="res://assets/cogwheel.png" type="Texture" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 27 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.7421
height = 46.9387

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.0218, 51.3921 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "idle"

[node name="PlayerShape" type="CollisionShape2D" parent="."]
position = Vector2( -4.48985, 2.24493 )
shape = SubResource( 2 )

[node name="PlayerCam" type="Camera2D" parent="."]
position = Vector2( 1, 0 )
current = true
limit_top = -1
limit_bottom = 1
drag_margin_h_enabled = true
drag_margin_left = 0.5
drag_margin_right = 0.5
editor_draw_drag_margin = true

[node name="PlayerArea" type="Area2D" parent="."]

[node name="PlayerAreaShape" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( -4.48985, 2.24493 )
shape = SubResource( 3 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="Cogwheels" type="CPUParticles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
preprocess = 0.25
speed_scale = 1.25
explosiveness = 1.0
texture = ExtResource( 29 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
spread = 180.0
initial_velocity = 70.0
angular_velocity = 28.0
linear_accel = 1.0
damping = 22.0
angle = 45.0
angle_random = 1.0

[node name="ShakeTime" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_shape_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_shape_entered"]
[connection signal="timeout" from="ShakeTime" to="." method="_on_ShakeTime_timeout"]
